--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
     z-index: 2000;
   }
 </style>
-<script>
+<!-- <script>
   document.addEventListener('DOMContentLoaded', function () {
     var script = document.createElement('script');
     script.src = 'https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js';
@@ -710,7 +710,7 @@
     }
     document.head.append(script);
   });
-</script>
+</script> -->
 
 
 <script>
