--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
         <div class="mx-2"><a class="text-decoration-none green" href="#"><i class="bi bi-facebook"></i></a></div>
       </div>
       <hr class="border-2">
-      <div class="text-center mb-3">© 2023 All rights reserved | Designed by <a href="https://atamyrat2005.github.io"
-          class="green">Atamyrat</a></div>
+      <div class="text-center mb-3">© 2024 All rights reserved | Designed by <a href="https://alemtilsimat.com/"
+          class="green">Alem Tilsimat</a></div>
     </div>
   </footer>
 </body>
